Cleaned up code. Fixed scroll-lock. Becomes unstuck to bottom when resizing window-y

--- a/style.css
+++ b/style.css
@@ -366,6 +366,7 @@ a {
 	white-space: wrap;
 	border-width: 8px;
 	border-right-width: 0;
+	border-top-width: 2px;
 	border-color: hsla(250, 80%, 65%, 1);;
 	border-style: solid;
 	background-color: hsl(248, 12%, 13%);
@@ -384,6 +385,7 @@ a {
 	white-space: wrap;
 	border-width: 8px;
 	border-right-width: 0;
+	border-top-width: 2px;
 	border-color: hsla(250, 80%, 65%, 1);
 	border-style: solid;
 	background-color: hsl(248, 12%, 13%);
